chore: transform transactions table into a component, inserting pagination and searchform too

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    /* Aliases */
     "baseUrl": "./src",
     "paths": {
       "@components/*": ["./components/*"],
