--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
       "@components/*": ["./components/*"],
       "@pages/*": ["./pages/*"],
       "@assets/*": ["./assets/*"],
-      "@styles/*": ["./styles/*"]
+      "@styles/*": ["./styles/*"],
+      "@services/*": ["./services/*"]
     }
   },
   "include": ["src"],
