chore: add hooks, context, zod, react hook forms and others

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,10 @@
       "@pages/*": ["./pages/*"],
       "@assets/*": ["./assets/*"],
       "@styles/*": ["./styles/*"],
-      "@services/*": ["./services/*"]
+      "@services/*": ["./services/*"],
+      "@contexts/*": ["./contexts/*"],
+      "@utils/*": ["./utils/*"],
+      "@hooks/*": ["./hooks/*"]
     }
   },
   "include": ["src"],
