--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "dev:server": "json-server server.json -w -p 3000 -d 1000"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.0",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-radio-group": "^1.1.3",
     "axios": "^1.4.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^5.3.11"
+    "react-hook-form": "^7.44.3",
+    "styled-components": "^5.3.11",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^20.2.5",
